Added in averages on hover

--- a/chart.html
+++ b/chart.html
@@ -105,7 +105,7 @@ var data1 = [
     "the_course_as_a_whole": 3.8,
     "time": 132,
     "professor": "Stuart Reges",
-    "course_whole_code": "Hiiiiii",
+    "course_whole_code": "HI101",
     "instructors_effectiveness": 4.2,
   },
   {
@@ -152,6 +152,19 @@ var data1 = [
   }
 ];
 
+var avgData = {
+    'CSE' : {
+        "the_course_as_a_whole" : 2.1, 
+        "instructors_effectiveness" : 4,
+        "grading_techniques" : 2.3
+    }, 
+    'HI' : {
+        "the_course_as_a_whole" : 3.1, 
+        "instructors_effectiveness" : 1,
+        "grading_techniques" : 3.3
+    }
+};
+
 var KEY_TO_HEADER = {
         "course_whole_code": "Course Code",
         "professor": "Instructor",
@@ -165,85 +178,124 @@ var KEY_TO_HEADER = {
 
 var courseNames = [];
 function modifyData(data, keys) {
-            var newData = []
-            var existingData = {};
-            var coursesToRatings = {};
-            var coursesToCounts = {};
+    var newData = []
+    var existingData = {};
+    var coursesToRatings = {};
+    var coursesToCounts = {};
 
-            // Merge averages
-            for(var i = 0; i < data.length; i++) {
-                var dataPoint = data[i];
+    // Merge averages
+    for(var i = 0; i < data.length; i++) {
+        var dataPoint = data[i];
 
-                var ratings = coursesToRatings[dataPoint.course_whole_code];
-                if (ratings == undefined) {
-                  ratings = [];
-                  for(var j = 0; j < keys.length; j++) {
-                    ratings[j] = 0;
-                  }
-                }
-                var counts = coursesToCounts[dataPoint.course_whole_code];
-                if (counts == undefined) {
-                  counts = [];
-                  for(var j = 0; j < keys.length; j++) {
-                    counts[j] = 0;
-                  }
-                }
-                for(var j = 0; j < keys.length; j++) {
-                  ratings[j] = dataPoint[keys[j]] + ratings[j];
-                  counts[j]++;
-                }
-                coursesToRatings[dataPoint.course_whole_code] = ratings;
-                coursesToCounts[dataPoint.course_whole_code] = counts;
-
-                // To use as key
-                dataPointString = JSON.stringify({"course_whole_code": dataPoint["course_whole_code"]});
-
-                // Updated stored rating for a class
-                existingData[dataPointString] = {};
-            }
-
-            // Set to previous format
-            for (var attribute in existingData) {
-                if( existingData.hasOwnProperty(attribute) ) {
-                    var course = JSON.parse(attribute);
-                    var rating = existingData[attribute];
-
-                    var ratings = coursesToRatings[course.course_whole_code];
-                    var counts = coursesToCounts[course.course_whole_code];
-
-                    for(var i = 0; i < keys.length; i++) {
-                      course[keys[i]] = parseFloat((ratings[i] / counts[i]).toFixed(2));
-                    }
-                    newData.push(course);
-                }
-            }
-
-            return newData;
+        var ratings = coursesToRatings[dataPoint.course_whole_code];
+        if (ratings == undefined) {
+          ratings = [];
+          for(var j = 0; j < keys.length; j++) {
+            ratings[j] = 0;
+          }
         }
+        var counts = coursesToCounts[dataPoint.course_whole_code];
+        if (counts == undefined) {
+          counts = [];
+          for(var j = 0; j < keys.length; j++) {
+            counts[j] = 0;
+          }
+        }
+        for(var j = 0; j < keys.length; j++) {
+          ratings[j] = dataPoint[keys[j]] + ratings[j];
+          counts[j]++;
+        }
+        coursesToRatings[dataPoint.course_whole_code] = ratings;
+        coursesToCounts[dataPoint.course_whole_code] = counts;
 
-        function reorderData(data, keys) {
-            var ratings = {}
-            for(var i = 0; i < keys.length; i++) {
-              ratings[i] = {};
-            }
-            var arr = {}
+        // To use as key
+        dataPointString = JSON.stringify({"course_whole_code": dataPoint["course_whole_code"]});
 
-            for(var i = 0; i < data.length; i++) {
-                var dataPoint = data[i];
-                var course_whole_code = dataPoint["course_whole_code"];
-                courseNames.push(course_whole_code);
-                for(var j = 0; j < keys.length; j++) {
-                  ratings[j][course_whole_code] = dataPoint[keys[j]];
-                }
-            }
+        // Updated stored rating for a class
+        existingData[dataPointString] = {};
+    }
+
+    // Set to previous format
+    for (var attribute in existingData) {
+        if( existingData.hasOwnProperty(attribute) ) {
+            var course = JSON.parse(attribute);
+            var rating = existingData[attribute];
+
+            var ratings = coursesToRatings[course.course_whole_code];
+            var counts = coursesToCounts[course.course_whole_code];
 
             for(var i = 0; i < keys.length; i++) {
-              arr[keys[i]] = d3.entries(ratings[i]);
+              course[keys[i]] = parseFloat((ratings[i] / counts[i]).toFixed(2));
             }
-            arr = d3.entries(arr);
 
-            return arr;
+            // Get department from course name
+            var courseName = course.course_whole_code;
+            var firstDigitIndex = courseName.search(/\d/);
+
+            var department = courseName;
+            if (firstDigitIndex >= 0) {
+                department = courseName.slice(0, firstDigitIndex);
+            }
+            course["averages"] = avgData[department];
+
+            newData.push(course);
         }
+    }
+
+    return newData;
+}
+
+function reorderData(data, keys, isAverage) {
+    var ratings = {}
+    for(var i = 0; i < keys.length; i++) {
+      ratings[i] = {};
+    }
+    var arr = {}
+
+    for(var i = 0; i < data.length; i++) {
+        var dataPoint = data[i];
+        var course_whole_code = dataPoint["course_whole_code"];
+        courseNames.push(course_whole_code);
+        for(var j = 0; j < keys.length; j++) {
+            var val = dataPoint[keys[j]];
+            if (isAverage) {
+                val = dataPoint.averages[keys[j]]
+            }
+            ratings[j][course_whole_code] = val;
+        }
+    }
+
+    for(var i = 0; i < keys.length; i++) {
+      arr[keys[i]] = d3.entries(ratings[i]);
+    }
+    arr = d3.entries(arr);
+
+    return arr;
+}
+
+function reorderDataForAverage(data, keys) {
+    var ratings = {}
+    for(var i = 0; i < keys.length; i++) {
+      ratings[i] = {};
+    }
+    var arr = {}
+
+    for(var i = 0; i < data.length; i++) {
+        var dataPoint = data[i];
+        var course_whole_code = dataPoint["course_whole_code"];
+        courseNames.push(course_whole_code);
+        for(var j = 0; j < keys.length; j++) {
+          ratings[j][course_whole_code] = dataPoint.averages[keys[j]];
+        }
+    }
+
+    for(var i = 0; i < keys.length; i++) {
+      arr[keys[i]] = d3.entries(ratings[i]);
+    }
+    arr = d3.entries(arr);
+
+    return arr;
+}
 
 var data2 = d3.nest()
     .key(function(d) {
@@ -284,7 +336,9 @@ var svg = d3.select("#bar-chart").append("svg")
     .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-data = reorderData(modifyData(data1, ["the_course_as_a_whole", "instructors_effectiveness"]), ["the_course_as_a_whole", "instructors_effectiveness"]);
+var modifiedData = modifyData(data1, ["the_course_as_a_whole", "instructors_effectiveness"]);
+data = reorderData(modifiedData, ["the_course_as_a_whole", "instructors_effectiveness"], false);
+dataAverage = reorderData(modifiedData, ["the_course_as_a_whole", "instructors_effectiveness"], true);
 
 var tip = d3.tip() 
     .attr('class', 'd3-tip')
@@ -302,6 +356,7 @@ x1.domain(courseNames).rangeRoundBands([0, x0.rangeBand()]);
 
 y.domain([0, 5]);
 
+// Creating Y and X Axis
 svg.append("g")
     .attr("class", "x axis")
     .attr("transform", "translate(0," + height + ")")
@@ -318,7 +373,7 @@ svg.append("g")
     .style("text-anchor", "middle")
     .text("Rating");
 
-
+// Creating rectangles
 var state = svg.selectAll(".state")
     .data(data)
 .enter().append("g")
@@ -329,30 +384,85 @@ state.selectAll("rect")
     .data(function (d) { return d.value; })
 .enter().append("rect")
     .attr("width", x1.rangeBand())
-    .attr("x", function (d) { return x1(d.key); })
-    .attr("y", function (d) { return y(d.value); })
-    .attr("height", function (d) { return height - y(d.value); })
-    .style("fill", function (d) { return color(d.key); });
+    .attr("x", function (d) { 
+        return x1(d.key); 
+    })
+    .attr("y", function (d) { 
+        return y(d.value); 
+    })
+    .attr("height", function (d) { 
+        return height - y(d.value); 
+    })
+    .style("fill", function (d) { 
+        return color(d.key); 
+    });
 
-  svg.selectAll(".hover")
+// Creating average bars
+svg.selectAll(".avg")
+    .data(dataAverage)
+    .enter().append("g")
+        .attr("class", "g")
+        .attr("transform", function (d) { 
+            return "translate(" + x0(d.key) + ",0)"; 
+        })
+        .selectAll("rect")
+        .data(function(d) {
+            return d.value;
+        })
+        .enter().append("rect")
+            .attr("class", function(d) {
+                return "avg " + d.key;
+            })
+            .attr("x", function(d) { 
+                return x1(d.key); 
+            })
+            .attr("width", x1.rangeBand())
+            .attr("y", function(d) { 
+                return y(d.value); 
+            })
+            .attr("height", function(d) { 
+                return 5; 
+            })
+            .style("fill", function (d) { 
+                return "black"; 
+            })
+            .style("fill-opacity", 0.0);
+
+// Creating hovering
+svg.selectAll(".hover")
     .data(data)
     .enter().append("g")
-    .attr("class", "g")
-    .attr("transform", function (d) { return "translate(" + x0(d.key) + ",0)"; })
-    .selectAll("rect")
-    .data(function(d) {
-        return d.value;
-    })
-    .enter().append("rect")
-        .attr("class", "hover")
-      .attr("x", function(d) { return x1(d.key); })
-      .attr("width", x1.rangeBand())
-      .attr("y", function(d) { return y(d.value); })
-      .attr("height", function(d) { return height - y(d.value); })
-      .on('mouseover', tip.show)
-      .on('mouseout', tip.hide)
-      .style("fill", function (d) { return color(d.key); });
+        .attr("class", "g")
+        .attr("transform", function (d) { 
+            return "translate(" + x0(d.key) + ",0)"; 
+        })
+        .selectAll("rect")
+        .data(function(d) {
+            return d.value;
+        })
+        .enter().append("rect")
+            .attr("class", "hover")
+            .attr("x", function(d) { 
+                return x1(d.key); 
+            })
+            .attr("width", x1.rangeBand())
+            .attr("y", function(d) { 
+                return y(d.value); 
+            })
+            .attr("height", function(d) { 
+                return height - y(d.value); 
+            })
+            .on('mouseover', function(d){
+                tip.show(d);
+                d3.selectAll("." + d.key).style("fill-opacity", 1.0);
+            })
+            .on('mouseout', function(d) {
+                tip.hide(d);
+                d3.selectAll("." + d.key).style("fill-opacity", 0); 
+            })
+            .style("fill-opacity", 0.0);
 
+// Creating the legend
 var legend = svg.selectAll(".legend")
     .data(courseNames.slice().reverse())
 .enter().append("g")
