added cs and images for tutorial

--- a/chart.html
+++ b/chart.html
@@ -426,7 +426,7 @@ svg.selectAll(".avg")
             .style("fill", function (d) { 
                 return "black"; 
             })
-            .style("fill-opacity", 0.0);
+            .style("fill-opacity", 0.8);
 
 // Creating hovering
 svg.selectAll(".hover")
@@ -474,6 +474,26 @@ legend.append("rect")
     .attr("width", 18)
     .attr("height", 18)
     .style("fill", color);
+
+    var legend2 = svg.selectAll(".legend2")
+    .data(["Department Average"])
+.enter().append("g")
+    .attr("class", "legend2")
+    .attr("transform", function (d, i) { return "translate(0," + i * 20 + ")"; });
+
+    legend2.append("rect")
+    .attr("x", width - 18 - 100 + 15)
+    .attr("y", 8 * 20)
+    .attr("width", 18)
+    .attr("height", 5)
+    .style("fill", "black");
+
+    legend2.append("text")
+    .attr("x", width - 24 + 30 - 100 + 15)
+    .attr("y", 20 * 8 + 6)
+ //   .attr("dy", ".35em")
+    .style("text-anchor", "start")
+    .text(function (d) { return d; });
 
 legend.append("text")
     .attr("x", width - 24 + 30 - 100 + 15)
