changed font + background color

--- a/tutorial.html
+++ b/tutorial.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <style>
+body {
+	background-color: #ecf0f1 !important;
+}
 .tutorial {
 	display: block;
 	margin: 0 auto;
     width: 880px;
+    color: #7f8c8d !important;
 }
 .tutorial-image {
 	width: 500px;
