fixed multiple hovers

--- a/chart.html
+++ b/chart.html
@@ -373,6 +373,20 @@ state.selectAll("rect")
         return color(d.key); 
     });
 
+console.log("Data", JSON.stringify(data));
+console.log("avg", JSON.stringify(dataAverage));
+
+dataAverage.forEach(function (kv) {
+            kv.value.forEach(function (d) {
+                d.col = kv.key;
+            });
+        });
+data.forEach(function (kv) {
+            kv.value.forEach(function (d) {
+                d.col = kv.key;
+            });
+        });
+
 // Creating average bars
 svg.selectAll(".avg")
     .data(dataAverage)
@@ -387,7 +401,7 @@ svg.selectAll(".avg")
         })
         .enter().append("rect")
             .attr("class", function(d) {
-                return "avg " + d.key;
+                return d.col.concat(d.key);
             })
             .attr("x", function(d) { 
                 return x1(d.key); 
@@ -430,11 +444,11 @@ svg.selectAll(".hover")
             })
             .on('mouseover', function(d){
                 tip.show(d);
-                d3.selectAll("." + d.key).style("fill-opacity", 0.5);
+                d3.selectAll("." + d.col.concat(d.key)).style("fill-opacity", 0.5);
             })
             .on('mouseout', function(d) {
                 tip.hide(d);
-                d3.selectAll("." + d.key).style("fill-opacity", 0); 
+                d3.selectAll("." + d.col.concat(d.key)).style("fill-opacity", 0); 
             })
             .style("fill-opacity", 0.0);
 
